objects/TabPanel_Component__mdt.object
<CustomObject>
    <description>This custom metadata type will be used to store Tab Panel setup information.</description>
    <fields>
        <fullName>Action_1__c</fullName>
        <inlineHelpText>Value should contain the Component Label that should be opened. Component name will be underscore separated.
For example, if component name is &quot;Example 1&quot; then a button will appear with &quot;Example 1&quot; and component name should be &quot;Example_1&quot;.</inlineHelpText>
        <label>Action 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_2__c</fullName>
        <inlineHelpText>Value should contain the Component Label that should be opened. Component name will be underscore separated.
For example, if component name is &quot;Example 1&quot; then a button will appear with &quot;Example 1&quot; and component name should be &quot;Example_1&quot;.</inlineHelpText>
        <label>Action 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldSet__c</fullName>
        <label>FieldSet</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Collapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Collapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>TabPanel_Components</relationshipLabel>
        <relationshipName>TabPanel_Components</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Type__c</fullName>
        <label>Screen Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Section</fullName>
                    <default>true</default>
                    <label>Section</label>
                </value>
                <value>
                    <fullName>Table</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_Actions_Supported__c</fullName>
        <label>Section Actions Supported</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                    <label>Edit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_Icon_Name__c</fullName>
        <inlineHelpText>Copy the icon qualified name from SLDS library.</inlineHelpText>
        <label>Section Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Order__c</fullName>
        <label>Section Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tab_Panel__c</fullName>
        <label>Tab Panel</label>
        <referenceTo>Tab_Panel__mdt</referenceTo>
        <relationshipLabel>TabPanel Components</relationshipLabel>
        <relationshipName>TabPanel_Components</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Table_Actions_Supported__c</fullName>
        <label>Table Actions Supported</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R</fullName>
                    <default>true</default>
                    <label>View</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>Edit</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>Delete</label>
                </value>
                <value>
                    <fullName>UD</fullName>
                    <label>Edit/Delete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TabPanel Component</label>
    <pluralLabel>TabPanel Components</pluralLabel>
</CustomObject>